@startuml
'https://plantuml.com/class-diagram
hide circle
class UserRepositoryBD <<interface>>

title Class Diagram / As User, I want to register an account



class User{
    -username
    -password
    -role
}

class Role {
    -role
}
class UserViewMapper{
    +toUserView(User user):UserView
}
class UserController{
    +register(final CreateUserRequest request)
    }
class UserService{
 +register(CreateUserRequest request):User
}

interface UserRepositoryBD
{
    +findByUsername(String userName): optional<User>
    +save(S entity) : <S extends User>
}


UserController ..> UserService: uses >
UserService ..> UserRepositoryBD: uses >
UserRepositoryBD ..> User: < record
UserController ..>UserViewMapper: uses >
User ..> Role : has
@enduml
